--- a/index.html
+++ b/index.html
@@ -302,9 +302,8 @@
         /* SLIDER SECTION */
         .image-slider {
             padding: 45px 0;
-            background: rgba(0, 0, 0, 0.1);
+            background: rgba(6, 0, 13, 0.952);
         }
-
         .slider-container {
             max-width: 900px;
             margin: 0 auto;
@@ -314,7 +313,7 @@
         .slider-wrapper {
             position: relative;
             width: 100%;
-            height: 200px;
+            height: 100%;
             overflow: hidden;
             border-radius: 10px;
             box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
