--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         /* HERO SECTION */
         .hero {
-            height: 52vh;
+            height: 40vh;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -110,14 +110,14 @@
         }
 
         .hero h1 {
-            font-size: 4rem;
+            font-size: 3rem;
             font-weight: 300;
             margin-bottom: 20px;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
 
         .hero p {
-            font-size: 1.3rem;
+            font-size: 1.1rem;
             margin-bottom: 50px;
             color: rgba(255, 255, 255, 0.8);
             max-width: 600px;
@@ -305,17 +305,17 @@
             background: rgba(6, 0, 13, 0.952);
         }
         .slider-container {
-            max-width: 900px;
+            max-width: 1024px;
             margin: 0 auto;
-            padding: 0 10px;
+            padding: 0 auto;
         }
 
         .slider-wrapper {
             position: relative;
-            width: 100%;
-            height: 100%;
+            width: 1024px;
+            height: 428px;
             overflow: hidden;
-            border-radius: 10px;
+            border-radius: 5px;
             box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
         }
 
