--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
 
         .logo {
-            font-size: 1.3rem;
+            font-size: 1.5rem;
             font-weight: 300;
             letter-spacing: 3px;
             background: linear-gradient(45deg, #d4af37, #ffd700);
@@ -70,7 +70,7 @@
             display: none;
             flex-direction: column;
             cursor: pointer;
-            gap: 3px;
+            gap: 5px;
         }
 
         .burger span {
@@ -302,20 +302,21 @@
         /* SLIDER SECTION */
         .image-slider {
             padding: 45px 0;
-            background: rgba(6, 0, 13, 0.952);
+            background: rgba(0, 0, 0, 0.1);
+            max-height: 428px;
         }
         .slider-container {
-            max-width: 1024px;
+            max-width: 900px;
             margin: 0 auto;
-            padding: 0 auto;
+            padding: 0 20px;
         }
 
         .slider-wrapper {
             position: relative;
-            width: 1024px;
-            height: 428px;
+            width: 100%;
+            height: 100%;
             overflow: hidden;
-            border-radius: 5px;
+            border-radius: 20px;
             box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
         }
 
@@ -334,8 +335,8 @@
         .slide img {
             height: 100%;
             width : 100%;
-            object-fit: cover;
-            border-radius : 10px;
+            object-fit: contain;
+            border-radius : 20px;
         }
 
         .slider-nav {
