--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prestige Parfums - Collection Premium</title>
+    <title>Badcat° Parfums - Collection Premium</title>
     <style>
         * {
             margin: 0;
@@ -301,14 +301,15 @@
 
         /* SLIDER SECTION */
         .image-slider {
-            padding: 30px 0;
+            padding: 7px 0;
             background: rgba(215, 243, 5, 0.1);
             max-height: 428px;
+            margin-top: 10px;
         }
         .slider-container {
             max-width: 900px;
             margin: 0 auto;
-            padding: 0 20px;
+            padding: 0 2px;
         }
 
         .slider-wrapper {
