--- a/index.html
+++ b/index.html
@@ -301,10 +301,9 @@
 
         /* SLIDER SECTION */
         .image-slider {
-            padding: 5px 0;
-            background: rgba(215, 243, 5, 0.1);
+            padding: 3px 0;
+            background: rgba(250, 238, 67, 0.1);
             max-height: 428px;
-            margin-top: 10px;
         }
         .slider-container {
             max-width: 900px;
@@ -316,8 +315,7 @@
             position: relative;
             width: 100%;
             height: 100%;
-            overflow: hidden;
-            border-radius: 10px;
+            overflow: none;
         }
 
         .slide {
@@ -336,14 +334,13 @@
             height: 100%;
             width : 100%;
             object-fit: contain;
-            border-radius : 20px;
         }
 
         .slider-nav {
             display: flex;
             justify-content: center;
-            gap: 3px;
-            margin-top: 10px;
+            gap: 1px;
+            margin-top: 5px;
         }
 
         .nav-dot {
