--- a/index.html
+++ b/index.html
@@ -301,14 +301,12 @@
 
         /* SLIDER SECTION */
         .image-slider {
-            padding: 3px 0;
+            padding: 3px;
             background: rgba(250, 238, 67, 0.1);
-            max-height: 428px;
         }
         .slider-container {
             max-width: 900px;
-            margin: 0 auto;
-            padding: 0 2px;
+            padding:2px;
         }
 
         .slider-wrapper {
