--- a/index.html
+++ b/index.html
@@ -301,12 +301,12 @@
 
         /* SLIDER SECTION */
         .image-slider {
-            padding: 3px;
+            padding: 2px;
             background: rgba(250, 238, 67, 0.1);
         }
         .slider-container {
             max-width: 900px;
-            padding:2px;
+            padding:0;
         }
 
         .slider-wrapper {
@@ -338,14 +338,12 @@
             display: flex;
             justify-content: center;
             gap: 3px;
-            margin-top: 1px;
         }
 
         .nav-dot {
             width: 5px;
             height: 5px;
             border-radius: 75%;
-            border: none;
             background: rgba(255, 255, 255, 0.3);
             cursor: pointer;
             transition: all 0.3s ease;
