--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
             text-align: center;
             position: relative;
             overflow: hidden;
+            margin-top: 0 !important;
+            padding-top: 0 !important;
         }
 
         .hero-content {
@@ -303,6 +305,7 @@
         .image-slider {
             padding: 2px;
             background: rgba(250, 238, 67, 0.1);
+            
         }
         .slider-container {
             max-width: 900px;
@@ -508,7 +511,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- HERO SECTION -->
     <section class="hero">
         <div class="hero-content">
