--- a/index.html
+++ b/index.html
@@ -305,6 +305,8 @@
         .image-slider {
             padding: 2px;
             background: rgba(250, 238, 67, 0.1);
+            margin-top: 0 !important;
+            padding-top: 0 !important;
             
         }
         .slider-container {
