--- a/index.html
+++ b/index.html
@@ -305,8 +305,7 @@
         .image-slider {
             padding: 2px;
             background: rgba(250, 238, 67, 0.1);
-            margin-top: 0 !important;
-            padding-top: 0 !important;
+            padding-bottom: 0 !important;
             
         }
         .slider-container {
@@ -342,7 +341,8 @@
         .slider-nav {
             display: flex;
             justify-content: center;
-            gap: 3px;
+            gap: 5px;
+            margin-top: 5px;
         }
 
         .nav-dot {
