--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
         .slider-container {
             max-width: 900px;
             padding:0;
+            padding-bottom: 0 !important;
         }
 
         .slider-wrapper {
