--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
             text-align: center;
             position: relative;
             overflow: hidden;
-            margin-top: 0 !important;
-            padding-top: 0 !important;
+            margin-bottom: 0 !important;
         }
 
         .hero-content {
