--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 
         /* HERO SECTION */
         .hero {
-            height: 40vh;
+            height: 20px;
             display: flex;
             align-items: center;
             justify-content: center;
             text-align: center;
             position: relative;
-            overflow: hidden;
+            overflow: none;
         }
 
         .hero-content {
@@ -112,13 +112,11 @@
         .hero h1 {
             font-size: 3rem;
             font-weight: 300;
-            margin-bottom: 5px;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
 
         .hero p {
             font-size: 1.1rem;
-            margin-bottom: 50px;
             color: rgba(255, 255, 255, 0.8);
             max-width: 600px;
             margin-left: auto;
