--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         /* HERO SECTION */
         .hero {
-            height: 20px;
+            height: 40vh;
             display: flex;
             align-items: center;
             justify-content: center;
