--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             justify-content: center;
             text-align: center;
             position: relative;
-            overflow: none;
+            overflow: hidden;
         }
 
         .hero-content {
@@ -112,12 +112,14 @@
         .hero h1 {
             font-size: 3rem;
             font-weight: 300;
+            margin-bottom: 20px;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
 
         .hero p {
             font-size: 1.1rem;
             color: rgba(255, 255, 255, 0.8);
+            margin-bottom: 50px;
             max-width: 600px;
             margin-left: auto;
             margin-right: auto;
@@ -302,8 +304,7 @@
         .image-slider {
             padding: 2px;
             background: #4267B2;
-            
-            
+            padding-bottom: 0 !important;         
         }
         .slider-container {
             max-width: 900px;
@@ -317,6 +318,7 @@
             width: 100%;
             height: 100%;
             overflow: none;
+            padding-bottom: 0 !important;
         }
 
         .slide {
