--- a/index.html
+++ b/index.html
@@ -304,13 +304,10 @@
         .image-slider {
             padding: 2px;
             background: #4267B2;
-            padding-bottom: 0 !important;         
         }
         .slider-container {
             max-width: 900px;
             margin: 0;
-            padding-bottom : 0 ! important ;
-     
         }
 
         .slider-wrapper {
@@ -318,7 +315,7 @@
             width: 100%;
             height: 100%;
             overflow: none;
-            padding-bottom: 0 !important;
+            margin-bottom: 0 !important;
         }
 
         .slide {
