--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             display: flex;
             justify-content: center;
             gap: 3px;
-            margin-top: 5px;
+            margin : 10px
         }
 
         .nav-dot {
