--- a/index.html
+++ b/index.html
@@ -334,13 +334,13 @@
             height: 100%;
             width : 100%;
             object-fit: contain;
+            margin-top: 5px;
         }
 
         .slider-nav {
             display: flex;
             justify-content: center;
             gap: 3px;
-            margin : 2px
         }
 
         .nav-dot {
