--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         /* HERO SECTION */
         .hero {
-            height: 40vh;
+            height: 20px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -303,7 +303,7 @@
         
         .image-slider {
             padding: 2px;
-            background: #4267B2;
+            background: rgba(0, 0, 0, 0.9);
         }
         .slider-container {
             max-width: 900px;
