--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
         /* SLIDER SECTION */
         
         .image-slider {
-            padding: 2px;
-            background: #0f0f0f 0%;
+            padding: 3px;
+            background: #efbe2a 0%;
         }
         .slider-container {
             max-width: 900px;
@@ -340,7 +340,8 @@
         .slider-nav {
             display: flex;
             justify-content: center;
-            gap: 3px;
+            gap: 4px;
+            margin: 2px;
         }
 
         .nav-dot {
@@ -461,6 +462,84 @@
   50%  { transform: translateY(-10px); }
   100% { transform: translateY(0); }
 }
+
+/* Fond du pop-up */
+#popup {
+  display: none; /* caché par défaut */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.6);
+  z-index: 9999;
+  animation: fadeIn 0.6s ease forwards; /* animation quand visible */
+}
+
+/* Contenu du pop-up centré */
+#popup .popup-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  border-radius: 10px;
+  padding: 5px;
+  width: 400px;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  animation: scaleUp 0.5s ease forwards; /* animation de l’image */
+}
+
+/* Image carrée */
+#popup img {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 10px;
+  display: block;
+}
+
+/* Croix de fermeture */
+#popup .close-btn {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  font-size: 28px;
+  cursor: pointer;
+  color: #333;
+}
+
+/* Animation fond */
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+/* Animation contenu */
+@keyframes scaleUp {
+  from {opacity: 0; transform: translate(-50%, -50%) scale(0.8);}
+  to {opacity: 1; transform: translate(-50%, -50%) scale(1);}
+}
+
+/* Effet sur la croix */
+#popup .close-btn {
+  position: absolute;
+  top: 8px;
+  right: 12px;
+  font-size: 28px;
+  cursor: pointer;
+  color: #333;
+  transition: transform 0.3s ease, color 0.3s ease;
+}
+
+#popup .close-btn:hover {
+  color: #ff6b6b;
+  transform: rotate(90deg) scale(1.2);
+}
+
     </style>
 </head>
 <body>
@@ -549,6 +628,16 @@
             </div>
         </div>
     </section>
+
+    <!-- Pop-up -->
+<div id="popup">
+  <div class="popup-content">
+    <span class="close-btn">&times;</span>
+    <a href="https://wa.me/p/30969244436055446/22542229253" target="_blank">
+      <img src="img/image4.jpg" alt="Promo BADCAT°">
+    </a>
+  </div>
+</div>
 
     <!-- FOOTER -->
     <footer id="contact">
@@ -641,6 +730,25 @@
                 }
             });
         });
+
+        // Affiche le pop-up 2 secondes après le chargement
+window.addEventListener('load', () => {
+  setTimeout(() => {
+    const popup = document.getElementById('popup');
+    popup.style.display = 'block';
+    // petit retard pour lancer l'animation
+    setTimeout(()=>{
+      popup.querySelector('.popup-content').style.opacity = '1';
+    },50);
+  }, 2000);
+});
+
+// Ferme le pop-up au clic sur la croix
+document.addEventListener('DOMContentLoaded', () => {
+  document.querySelector('#popup .close-btn').addEventListener('click', () => {
+    document.getElementById('popup').style.display = 'none';
+  });
+});
     </script>
 </body>
 </html>
