--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
         /* SLIDER SECTION */
         
         .image-slider {
-            padding: 3px;
-            background: #efbe2a 0%;
+            padding: 0;
+            background: #0f0f0f 0%;
         }
         .slider-container {
             max-width: 900px;
@@ -334,7 +334,7 @@
             height: 100%;
             width : 100%;
             object-fit: contain;
-            margin-top: 5px;
+            margin-top: 1px;
         }
 
         .slider-nav {
@@ -434,7 +434,7 @@
             }
 
             .slider-wrapper {
-                height: 200px;
+                height: 195px;
             }
 
             .collections h2 {
