--- a/index.html
+++ b/index.html
@@ -114,13 +114,14 @@
             font-weight: 300;
             margin-bottom: 20px;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            color: #d4af37;
         }
 
         .hero p {
             font-size: 1.1rem;
             color: rgba(255, 255, 255, 0.8);
             margin-bottom: 50px;
-            max-width: 600px;
+            max-width: 495px;
             margin-left: auto;
             margin-right: auto;
         }
@@ -302,7 +303,7 @@
         /* SLIDER SECTION */
         
         .image-slider {
-            padding: 0;
+            height: 3px;
             background: #0f0f0f 0%;
         }
         .slider-container {
