--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             font-size: 1.1rem;
             color: rgba(255, 255, 255, 0.8);
             margin-bottom: 50px;
-            max-width: 495px;
+            max-width: 600px;
             margin-left: auto;
             margin-right: auto;
         }
@@ -303,7 +303,7 @@
         /* SLIDER SECTION */
         
         .image-slider {
-            height: 3px;
+            padding: 4px;
             background: #0f0f0f 0%;
         }
         .slider-container {
