--- a/index.html
+++ b/index.html
@@ -405,10 +405,10 @@
 
             .nav-links {
                 position: fixed;
-                top: 70px;
+                top: 25px;
                 right: -100%;
                 width: 100%;
-                height: calc(100vh - 70px);
+                height: 50px;
                 background: rgba(0, 0, 0, 0.95);
                 flex-direction: column;
                 justify-content: center;
@@ -598,7 +598,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Collection Premium</h1>
-            <p>Fragrances très rare, 40% Essence, élaborer uniquement pour ceux qui aiment sentir bon pendant longtemps ! </p>
+            <p>Fragrances très rare, 40% Essence, <br>élaborer uniquement pour ceux qui aiment <br>sentir bon pendant longtemps ! </p>
             
             <div class="cta-container">
                 <a href="https://mylnk.github.io/femme/" class="cta-button cta-feminine">Collection Féminine</a>
@@ -634,8 +634,8 @@
 <div id="popup">
   <div class="popup-content">
     <span class="close-btn">&times;</span>
-    <a href="https://wa.me/p/30969244436055446/22542229253" target="_blank">
-      <img src="img/image4.jpg" alt="Promo BADCAT°">
+    <a href="https://wa.me/c/22542229253" target="_blank">
+      <img src="img/Pop-up.jpg" alt="Promo BADCAT°">
     </a>
   </div>
 </div>
