--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Collection Premium</h1>
-            <p>Fragrances très rare, 40% Essence, <br>élaborer uniquement pour ceux qui aiment <br>sentir bon pendant longtemps ! </p>
+            <p>Fragrances très rare, 40% Essence, <br>élaborer uniquement pour ceux qui <br>aiment sentir bon pendant longtemps ! </p>
             
             <div class="cta-container">
                 <a href="https://mylnk.github.io/femme/" class="cta-button cta-feminine">Collection Féminine</a>
@@ -647,7 +647,7 @@
                 © 2025 Badcat° Parfums - Tous droits reservés
             </div>
             <div class="social-links">
-                <a href="https://facebook.com" target="_blank">Suivez-nous ici</a>
+                <a href="https://www.facebook.com/share/1FVYPfm1iG/" target="_blank">Suivez-nous ici</a>
             </div>
         </div>
     </footer>
