--- a/index.html
+++ b/index.html
@@ -540,7 +540,9 @@
   color: #ff6b6b;
   transform: rotate(90deg) scale(1.2);
 }
-
+.me {
+    color: #d4af37;
+}}
     </style>
 </head>
 <body>
@@ -598,7 +600,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Collection Premium</h1>
-            <p>Fragrances très rare, 40% Essence, <br>élaborer uniquement pour ceux qui <br>aiment sentir bon pendant longtemps ! </p>
+            <p> 40% ESSENCE,<br><span class="me">BADCAT°</span> - Sauvage, mais irrésistiblement raffiné.<br>Un parfum, un pouvoir <span class="me">BADCAT°</span> - Osez briiler!</p>
             
             <div class="cta-container">
                 <a href="https://mylnk.github.io/femme/" class="cta-button cta-feminine">Collection Féminine</a>
