--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Collection Premium</h1>
-            <p> 40% ESSENCE,<br><span class="me">BADCAT°</span> - Sauvage, mais irrésistiblement raffiné.<br>Un parfum, un pouvoir <span class="me">BADCAT°</span> - Osez briiler!</p>
+            <p> 40% ESSENCE,<br><span class="me">BADCAT°</span> - Sauvage, mais irrésistiblement raffiné. Un parfum, un pouvoir <span class="me">BADCAT°</span> - Osez briller!</p>
             
             <div class="cta-container">
                 <a href="https://mylnk.github.io/femme/" class="cta-button cta-feminine">Collection Féminine</a>
