--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         /* HERO SECTION */
         .hero {
-            height: 36vh;
+            height: 47vh;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -118,10 +118,10 @@
         }
 
         .hero p {
-            font-size: 1.1rem;
+            font-size: 20px;
             color: rgba(255, 255, 255, 0.8);
             margin-bottom: 10px;
-            max-width: 500px;
+            max-width: 470px;
             margin-left: auto;
             margin-right: auto;
         }
@@ -137,7 +137,7 @@
         .cta-button {
             position: relative;
             padding: 20px 40px;
-            font-size: 1.1rem;
+            font-size: 18px;
             font-weight: 600;
             text-decoration: none;
             border-radius: 50px;
@@ -425,7 +425,7 @@
             }
 
             .hero h1 {
-                font-size: 2.2rem;
+                font-size: 30px;
             }
 
             .cta-container {
@@ -600,7 +600,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Collection Premium</h1>
-            <p> 40% ESSENCE,<br><span class="me">BADCAT°</span> - Sauvage, mais irrésistiblement raffiné. Un parfum, un pouvoir <span class="me">BADCAT°</span> - Osez briller!</p>
+            <p> 40% ESSENCE,<br><span class="me">BADCAT°</span> - Sauvage, mais irrésistiblement raffiné. Un parfum, un pouvoir <span class="me">BADCAT°</span>12h sur le corps!</p>
             
             <div class="cta-container">
                 <a href="https://mylnk.github.io/femme/" class="cta-button cta-feminine">Collection Féminine</a>
